--- a/src/Components/AuthBox/LogSign.css
+++ b/src/Components/AuthBox/LogSign.css
@@ -5,9 +5,10 @@
     padding: 0.3rem 0.7rem;
 }
 .authbox-text{
-    font-size: 0.8rem;
+    font-size: 0.9rem;
 }
 .authbox-text i{
-    color: #b6be1f;
+    color: #fff;
     font-style: italic;
+    cursor: pointer;
 }
