--- a/src/Pages/AuthPage/AuthPage.css
+++ b/src/Pages/AuthPage/AuthPage.css
@@ -3,4 +3,8 @@
 }
 .authpage-cont{
 min-height: 100vh;
+min-width: 100vw;
+background-color: #FA8BFF;
+background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
+
 }
