--- a/src/Components/Common/Loader/Loader.css
+++ b/src/Components/Common/Loader/Loader.css
@@ -7,16 +7,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(56, 54, 54, 0.8);
     z-index: 1000;
 
 }
 .loader{
-    border: 16px solid #f3f3f3;
+    border: 3px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498db;
-    width: 120px;
-    height: 120px;
+    border-top: 3px solid #1a1d1f;
+    width: 3rem;
+    height: 3rem;
     animation: spin 2s linear infinite;
 
 }
