--- a/src/Components/CourtDetailsBody/CourtDetailsBody.css
+++ b/src/Components/CourtDetailsBody/CourtDetailsBody.css
@@ -19,4 +19,14 @@ img{
     z-index: 2;
     color: #fff;
     margin-left: 2rem;
+    
 }
+.court-contents-container button{
+    border-radius: 5px;
+    color: #fff;
+    background: transparent;
+    padding: 0.3rem 1rem;
+    height: 5rem;
+    margin-right: 2rem;
+}
+
